# Disks-simulation

./: CMakeLists.txt  LICENSE  README.md
src/: disk.cpp  disk.h  funcs.cpp  funcs.h  main.cpp
